# Simu_Marche_Casadi

./: .gitignore  Define_casadi_callback.py  Define_parameters.py  Fcn_Affichage.py  Fcn_InitialGuess.py  Fcn_Objective.py  Fcn_forward_dynamic.py  Fcn_forward_dynamic_2.py  Fcn_plot_Results.py  Fcn_plot_states_controls.py  Fcn_print_data.py  LoadData.py  Marche_Fcn_Integration.py  Platform_Force.py  README.md  Read_Muscod.py  Results_txt.py  Test_sol_init.py  example_biorbdOptim.py  project_ANsWER_gaitCycle.py  project_ANsWER_gaitCycle_v2.py  project_ANsWER_stance.py  project_ANsWER_stanceOnly.py  project_ANsWER_swing.py  project_GaitCycle.py  projet_ANsWER_gaitCycle.py  projet_ANsWER_swingOnly.py  test_benjamin.py
DonneesMouvement/: equincocont01_out.c3d  equincocont01_out_MOD5000_leftHanded_GenderF_Florent_.Q2  equincocont02_out.c3d  equincocont02_out_MOD5000_leftHanded_GenderF_Florent_.Q2  equincocont03_out.c3d  equincocont03_out_MOD5000_leftHanded_GenderF_Florent_.Q2  equincocont04_out.c3d  equincocont04_out_MOD5000_leftHanded_GenderF_Florent_.Q2  equincocont05_out.c3d  equincocont05_out_MOD5000_leftHanded_GenderF_Florent_.Q2  equincocont06_out.c3d  equincocont06_out_MOD5000_leftHanded_GenderF_Florent_.Q2  equincocont07_out.c3d  equincocont07_out_MOD5000_leftHanded_GenderF_Florent_.Q2  equincocont08_out.c3d  equincocont08_out_MOD5000_leftHanded_GenderF_Florent_.Q2  equincocont09_out.c3d  equincocont09_out_MOD5000_leftHanded_GenderF_Florent_.Q2  equincocont10_out.c3d  equincocont10_out_MOD5000_leftHanded_GenderF_Florent_.Q2  equincocont11_out.c3d  equincocont11_out_MOD5000_leftHanded_GenderF_Florent_.Q2  equincocont12_out.c3d  equincocont12_out_MOD5000_leftHanded_GenderF_Florent_.Q2  equincocont13_out.c3d  equincocont13_out_MOD5000_leftHanded_GenderF_Florent_.Q2  equincocont14_out.c3d  equincocont14_out_MOD5000_leftHanded_GenderF_Florent_.Q2  equincocont15_out.c3d  equincocont15_out_MOD5000_leftHanded_GenderF_Florent_.Q2  equinus01_out.c3d  equinus01_out_MOD5000_leftHanded_GenderF_Florent_.Q2  equinus02_out.c3d  equinus02_out_MOD5000_leftHanded_GenderF_Florent_.Q2  equinus03_out.c3d  equinus03_out_MOD5000_leftHanded_GenderF_Florent_.Q2  equinus04_out.c3d  equinus04_out_MOD5000_leftHanded_GenderF_Florent_.Q2  equinus05_out.c3d  equinus05_out_MOD5000_leftHanded_GenderF_Florent_.Q2  (+51 more)
Fcn_Casadi/libCoM/: CMakeLists.txt  eocar.cpp
Fcn_Casadi/libComputeConstraint_5LinkBiped/: CMakeLists.txt  eocar.cpp
Fcn_Casadi/libComputeConstraint_5LinkBiped/include/: compute_constraint_5link_biped.h
Fcn_Casadi/libComputeConstraint_5LinkBiped/src/: compute_constraint_5link_biped.cpp
Fcn_Casadi/libFDContact/: CMakeLists.txt  eocar.cpp
Fcn_Casadi/libFDSansContact/: CMakeLists.txt  eocar.cpp
Fcn_Casadi/libGJCS_casadi/: CMakeLists.txt  eocar.cpp
Fcn_Casadi/libGJCS_casadi/include/: GJCS_casadi.h
Fcn_Casadi/libGJCS_casadi/src/: GJCS_casadi.cpp
Fcn_Casadi/libMarkers_stance/: CMakeLists.txt  (+1 more)
Fcn_Matlab/: ComputeActivationDynamics.m  LoadData.m  Marche_Florent_Casadi_Main.m  temp.s2mMod
Marche_BiorbdOptim/: LoadData.py  compare_muscles_activations.py  compare_parameters.py  comparison_equincocont.py  load_ocp_solution.py  plot_solution.py
Marche_Florent_biorbd_casadi/: Fcn_Affichage.py  Fcn_RK4.py  Fcn_forward_dynamique.py  Fcn_objective.py  Initial_Guess.py  LoadData.py  Plateform_Force.py  projet_ANsWER_gaitcycle.py
ModelesS2M/: ANsWER_Rleg_10dof_43muscle.s2mMod  ANsWER_Rleg_12dof_17muscle_deGroote_3d_externalforces.bioMod  ANsWER_Rleg_6dof_17muscle_0contact.bioMod  ANsWER_Rleg_6dof_17muscle_0contact_deGroote_3d.bioMod  ANsWER_Rleg_6dof_17muscle_1contact.bioMod  ANsWER_Rleg_6dof_17muscle_1contact_deGroote.bioMod  ANsWER_Rleg_6dof_17muscle_1contact_deGroote_3d.bioMod  ANsWER_Rleg_6dof_17muscle_1contact_deGroote_3d_externalforces.bioMod  ANsWER_externalforces_simple.bioMod
Old_prgrm/: Define_parameters.py  Fcn_plot_Results.py  Fcn_plot_states_controls.py  Fcn_print_data.py  LoadData.py  project_ANsWER_stance.py  project_ANsWER_swing.py  project_GaitCycle_impact.py
(+215 files in other folders)
